meta tag updated

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:title" content="ResuMate - Resume Builder"/>
+    <meta property="og:description" content="Build a professional resume in minutes with our easy-to-use resume builder. Choose from customizable templates and download your resume in PDF format instantly. Perfect for job seekers and professionals!"/>
+    <meta property="og:image" content="https://ik.imagekit.io/ypmvzuphr/Screenshot%202025-02-19%20104224.png?updatedAt=1739987550724" />
+    <meta property="og:url" content="https://resume-builder-delta-peach.vercel.app" />
+    <meta property="og:type" content="website" />
+  
+    <meta name="twitter:card" content="https://ik.imagekit.io/ypmvzuphr/Screenshot%202025-02-19%20104224.png?updatedAt=1739987550724" />
+    <meta name="twitter:title" content="ResuMate" />
+    <meta name="twitter:image" content="https://ik.imagekit.io/ypmvzuphr/Screenshot%202025-02-19%20104224.png?updatedAt=1739987550724" />
+
     <link rel="icon" type="image/svg+xml" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
