confirm button fixed
added a eye button in to toggle view and hide password.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta property="og:title" content="ResuMate - Resume Builder"/>
     <meta property="og:description" content="Build a professional resume in minutes with our easy-to-use resume builder. Choose from customizable templates and download your resume in PDF format instantly. Perfect for job seekers and professionals!"/>
-    <meta property="og:image" content="https://ik.imagekit.io/ypmvzuphr/android-chrome-192x192.png?updatedAt=1739987988949" />
+    <meta property="og:image" content="https://ik.imagekit.io/ypmvzuphr/Screenshot%202025-02-19%20104224.png?updatedAt=1739987550724" />
     <meta property="og:url" content="https://resume-builder-delta-peach.vercel.app" />
     <meta property="og:type" content="website" />
   
