--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="//code.tidio.co/yjx4vaqyq59ud92suadkmol4cdqvhpbd.js" async></script>
   </body>
 </html>
